[tool.poetry]
name = "panecontrol"
version = "0.1.0"
description = ""
authors = ["Oivvio Polite <oivvio.polite@reasonstudios.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
libtmux = "^0.25.0"
textual = "^0.46.0"
typer = "^0.9.0"



[tool.poetry.group.dev.dependencies]
textual-dev = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
panecontrol = "panecontrol.cli:main"
panecontrol_menu = "panecontrol.menu:main"
